# AndroidGL

./: README.md
OpenGLJava/: README.md
OpenGLJava/app/: build.gradle
OpenGLJava/app/src/androidTest/java/com/example/arf/opengljava/: ExampleInstrumentedTest.java
OpenGLJava/app/src/main/: AndroidManifest.xml
OpenGLJava/app/src/main/assets/: README.md  cube2.json
OpenGLJava/app/src/main/assets/shaders/: phong.frag  phong.vert
OpenGLJava/app/src/main/java/com/example/arf/opengljava/: IOHelper.java  Mat3.java  Mat4.java  Material.java  Model.java  MyGLRenderer.java  MyGLSurfaceView.java  OpenGLActivity.java  Shader.java
OpenGLJava/app/src/main/res/layout/: activity_open_gl.xml
OpenGLJava/app/src/main/res/values/: strings.xml
OpenGLJava/app/src/test/java/com/example/arf/opengljava/: ExampleUnitTest.java
OpenGLNDK/: README.md
OpenGLNDK-prebuilt/app/: CMakeLists.txt  build.gradle
OpenGLNDK-prebuilt/app/src/androidTest/java/com/lighthouse3d/android/openglndk_prebuilt/: ExampleInstrumentedTest.java
OpenGLNDK-prebuilt/app/src/main/: AndroidManifest.xml
OpenGLNDK-prebuilt/app/src/main/assets/: README.md
OpenGLNDK-prebuilt/app/src/main/assets/shaders/: color.vert  cubemap1.vert  pixeldirdifambspec.vert
OpenGLNDK-prebuilt/app/src/main/cpp/: AAIOStream.cpp  AAIOSystem.cpp  AALogStream.h  native-lib.cpp  textureLoader.cpp
OpenGLNDK-prebuilt/app/src/main/java/com/lighthouse3d/android/openglndk_prebuilt/: GLES3JNILib.java  GLES3JNIView.java  MainActivity.java  TextureLoader.java
OpenGLNDK-prebuilt/app/src/main/res/layout/: activity_main.xml
OpenGLNDK-prebuilt/app/src/main/textureLoader/: textureLoader.cpp  textureLoader.h
OpenGLNDK-prebuilt/app/src/main/vsl/: vsFontLib.cpp  vsModelLib.cpp  vsModelLib.h  vsResourceLib.cpp  vsResourceLib.h  vsSurfRevLib.cpp  vslConfig.h
OpenGLNDK-prebuilt/app/src/test/java/com/lighthouse3d/android/openglndk_prebuilt/: ExampleUnitTest.java
OpenGLNDK/app/: CMakeLists.txt  build.gradle
OpenGLNDK/app/src/androidTest/java/com/lighthouse3d/android/openglndk/: ExampleInstrumentedTest.java
OpenGLNDK/app/src/main/: AndroidManifest.xml
OpenGLNDK/app/src/main/assets/CM/: README.md
OpenGLNDK/app/src/main/assets/shaders/: color.frag  cubemap1.frag  pixeldirdifambspec.frag
OpenGLNDK/app/src/main/assimp/assimp/: 3DSLoader.cpp  BlenderDNA.cpp  ColladaExporter.cpp  ColladaExporter.h  FileSystemFilter.h  Importer.cpp  ImporterRegistry.cpp  StringUtils.h  a.txt
OpenGLNDK/app/src/main/assimp/assimp/assimp/: Logger.hpp
OpenGLNDK/app/src/main/assimp/contrib/irrXML/: irrXML.cpp
OpenGLNDK/app/src/main/assimp/contrib/openddlparser/code/: OpenDDLParser.cpp  a.txt
OpenGLNDK/app/src/main/cpp/: AAIOStream.h  AAIOSystem.h  native-lib.Copycpp  native-lib.cpp
OpenGLNDK/app/src/main/java/com/lighthouse3d/android/openglndk/: GLES3JNILib.java  GLES3JNIView.java  MainActivity.java  TextureLoader.java
OpenGLNDK/app/src/main/res/layout/: activity_main.xml
OpenGLNDK/app/src/main/res/values/: strings.xml
OpenGLNDK/app/src/main/textureLoader/: textureLoader.cpp
OpenGLNDK/app/src/main/vsl/: vslConfig.h
OpenGLNDK/app/src/main/vsl - Copy/: gl2ext.h  vsFontLib.h
OpenGLNDK/app/src/test/java/com/lighthouse3d/android/openglndk/: ExampleUnitTest.java
